--- a/my_server/Cargo.toml
+++ b/my_server/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["nneesshh <neckshotk@gmail.com>"]
 description = "Common library test suite for Rust projects"
 edition = "2021"
-build = "build.rs"
+build = false
 
 # conflict with pprof
 #[profile.dev]
@@ -18,31 +18,29 @@ lazy_static = "1"
 paste = "1"
 log = "0.4"
 chrono = "0.4"
-tonic = "0.10"
-atomic = { path = "../atomic-rs" }
-base64 = { path = "../rust-base64" }
-bytes = { path = "../bytes" }
-hashbrown = { path = "../hashbrown" }
-http = { path = "../http" }
-parking_lot = { path = "../parking_lot" }
-prost = { path = "../prost"}
-roxmltree = { path = "../roxmltree" }
-serde_json = { path = "../json" }
-thread_local = { path = "../thread_local-rs" }
-commlib = { path = "../commlib" }
-app_helper = { path = "../app_helper-rs" }
-my_logger =  { path = "../my_logger-rs" }
-net_packet = { path = "../net_packet-rs" }
+
+atomic = { path = "../libs/atomic-rs" }
+base64 = { path = "../libs/rust-base64" }
+bytes = { path = "../libs/bytes" }
+hashbrown = { path = "../libs/hashbrown" }
+http = { path = "../libs/http" }
+parking_lot = { path = "../libs/parking_lot" }
+prost = { path = "../libs/prost"}
+roxmltree = { path = "../libs/roxmltree" }
+serde_json = { path = "../libs/json" }
+thread_local = { path = "../libs/thread_local-rs" }
+commlib = { path = "../libs/commlib" }
+my_logger =  { path = "../libs/my_logger-rs" }
+net_packet = { path = "../libs/net_packet-rs" }
+
+app_helper = { path = "../common/app_helper-rs" }
+proto = { path = "../common/proto-rs" }
 
 [target.'cfg(unix)'.dependencies]
-pprof = { path = "../pprof-rs", features = ["flamegraph"] }
+pprof = { path = "../libs/pprof-rs", features = ["flamegraph"] }
 
 #[dev-dependencies]
-
-[build-dependencies]
-dunce = "1"
-miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
-tonic-build = "0.10"
+#[build-dependencies]
 
 [[example]]
 name = "test_server"
