--- a/mine/explode_cxx/src/explode_cxx.vcxproj
+++ b/mine/explode_cxx/src/explode_cxx.vcxproj
@@ -71,7 +71,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>../../explode_rs/target/debug/safecomm.lib;ws2_32.lib;Bcrypt.lib;Userenv.lib;NtDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>../../explode_rs/target/debug/safecomm.lib;ws2_32.lib;Bcrypt.lib;Userenv.lib;NtDll.lib;Crypt32.lib;Ncrypt.lib;Secur32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -90,7 +90,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>../../explode_rs/target/debug/safecomm.lib;ws2_32.lib;Bcrypt.lib;Userenv.lib;NtDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>../../explode_rs/target/debug/safecomm.lib;ws2_32.lib;Bcrypt.lib;Userenv.lib;NtDll.lib;Crypt32.lib;Ncrypt.lib;Secur32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
