--- a/my_server/Cargo.toml
+++ b/my_server/Cargo.toml
@@ -18,10 +18,10 @@ lazy_static = "1"
 paste = "1"
 log = "0.4"
 chrono = "0.4"
+bytes = "1"
 
 atomic = { path = "../libs/atomic-rs" }
 base64 = { path = "../libs/rust-base64" }
-bytes = { path = "../libs/bytes" }
 hashbrown = { path = "../libs/hashbrown" }
 http = { path = "../libs/http" }
 parking_lot = { path = "../libs/parking_lot" }
