--- a/common/app_helper-rs/Cargo.toml
+++ b/common/app_helper-rs/Cargo.toml
@@ -22,11 +22,12 @@ arc-swap = { path = "../../libs/arc-swap" }
 atomic = { path = "../../libs/atomic-rs" }
 hashbrown = { path = "../../libs/hashbrown" }
 parking_lot = { path = "../../libs/parking_lot" }
-prost = { path = "../../libs/prost"}
-roxmltree = { path = "../../libs/roxmltree" }
+#roxmltree = { path = "../../libs/roxmltree" }
 clap = { path = "../../libs/clap" }
 commlib = { path = "../../libs/commlib" }
 my_logger =  { path = "../../libs/my_logger-rs" }
+my_service = { path = "../../libs/my_service-rs" }
 net_packet = { path = "../../libs/net_packet-rs" }
 
+prost = { path = "../../libs/prost"}
 proto_inner = { path = "../proto_inner-rs" }
