--- a/mine/explode_rs/Cargo.toml
+++ b/mine/explode_rs/Cargo.toml
@@ -32,7 +32,8 @@ serde_json = { path = "../../libs/json" }
 thread_local = { path = "../../libs/thread_local-rs" }
 commlib = { path = "../../libs/commlib" }
 my_logger =  { path = "../../libs/my_logger-rs" }
-my_service = { path = "../../libs/my_service-rs" }
+
+srv_helper = { path = "../../common/srv_helper-rs" }
 
 #[dev-dependencies]
 #[build-dependencies]
