--- a/common/srv_helper-rs/Cargo.toml
+++ b/common/srv_helper-rs/Cargo.toml
@@ -21,6 +21,7 @@ libc = "0.2"
 log = "0.4"
 paste = "1"
 ring = "0.17"
+serde_json = "1"
 uuid = { version = "1", features = ["v4"]}
 
 atomic = { path = "../../libs/atomic-rs" }
