--- a/mine/explode_server_rs/Cargo.toml
+++ b/mine/explode_server_rs/Cargo.toml
@@ -18,6 +18,7 @@ lazy_static = "1"
 paste = "1"
 log = "0.4"
 chrono = "0.4"
+serde_json = "1"
 
 atomic = { path = "../../libs/atomic-rs" }
 base64 = { path = "../../libs/rust-base64" }
@@ -26,14 +27,13 @@ http = { path = "../../libs/http" }
 parking_lot = { path = "../../libs/parking_lot" }
 prost = { path = "../../libs/prost"}
 roxmltree = { path = "../../libs/roxmltree" }
-serde_json = { path = "../../libs/json" }
 thread_local = { path = "../../libs/thread_local-rs" }
 commlib = { path = "../../libs/commlib" }
 db_access = { path = "../../libs/db_access-rs" }
 my_logger =  { path = "../../libs/my_logger-rs" }
-my_service =  { path = "../../libs/my_service-rs" }
 net_packet = { path = "../../libs/net_packet-rs" }
 
+srv_helper =  { path = "../../common/srv_helper-rs" }
 app_helper = { path = "../../common/app_helper-rs" }
 proto = { path = "../../common/proto-rs" }
 
