--- a/mine/explode_rs/Cargo.toml
+++ b/mine/explode_rs/Cargo.toml
@@ -22,13 +22,13 @@ lazy_static = "1"
 paste = "1"
 log = "0.4"
 chrono = "0.4"
+serde_json = "1"
 
 hashbrown = { path = "../../libs/hashbrown" }
 http = { path = "../../libs/http" }
 parking_lot = { path = "../../libs/parking_lot" }
 prost = { path = "../../libs/prost"}
 roxmltree = { path = "../../libs/roxmltree" }
-serde_json = { path = "../../libs/json" }
 thread_local = { path = "../../libs/thread_local-rs" }
 commlib = { path = "../../libs/commlib" }
 my_logger =  { path = "../../libs/my_logger-rs" }
